[project]
name = "airport-test-server"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Rusty Conover", email = "rusty@conover.me" }
]
dependencies = [
    "pyarrow>=20.0.0",
    "query-farm-server-base @ git+https://github.com/Query-farm/server_base.git@master",
    "duckdb-query-tools @ git+https://github.com/Query-farm/duckdb-query-tools.git@master",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-mypy>=0.10.3",
    "pytest-env>=1.1.3",
    "pytest-cov>=5.0.0",
    "pytest-parallel>=0.1.1",
    "pytest-xdist>=3.6.1",
    "ruff==0.11.2",
]


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/airport_test_server"]

[project.scripts]
airport_test_server = 'airport_test_server:do_server'

[tool.rye.scripts]
dev = { cmd = "airport_test_server --location grpc://0.0.0.0:50003", description = "Run the test server" }

[tool.pytest]


[tool.mypy]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]


follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true


[tool.pydantic.mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ['E501']
